ultra minor design change

--- a/LastBoundary/LastBoundary.csproj
+++ b/LastBoundary/LastBoundary.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{C4EC74EA-5ADA-4345-9C7C-2B0BE2609BF9}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>LastBoundary</RootNamespace>
     <AssemblyName>LastBoundary</AssemblyName>
